[gd_scene load_steps=5 format=3 uid="uid://ciw22wbkgnx0c"]

[ext_resource type="Script" path="res://scripts/start screen/start_menu_Manager.gd" id="1_44x7n"]
[ext_resource type="PackedScene" uid="uid://cquyj6k5qf206" path="res://entities/start screen/attribution.tscn" id="2_n61xv"]
[ext_resource type="FontFile" uid="uid://8fl7yecdpp08" path="res://fonts/Tiny5-Regular.ttf" id="3_0jywf"]

[sub_resource type="LabelSettings" id="LabelSettings_0j45f"]
font = ExtResource("3_0jywf")

[node name="manager" type="Node"]
script = ExtResource("1_44x7n")

[node name="attribution" parent="." instance=ExtResource("2_n61xv")]

[node name="menu" type="Node2D" parent="."]

[node name="base_canvas" type="CanvasLayer" parent="menu"]
follow_viewport_enabled = true

[node name="start_game_label" type="Label" parent="menu/base_canvas"]
offset_left = -23.0
offset_top = -38.0
offset_right = 23.0
offset_bottom = -17.0
text = "START
"
label_settings = SubResource("LabelSettings_0j45f")
metadata/_edit_use_anchors_ = true

[node name="settings_label" type="Label" parent="menu/base_canvas"]
offset_left = -35.0
offset_top = -14.0
offset_right = 35.0
offset_bottom = 7.0
text = "SETTINGS
"
label_settings = SubResource("LabelSettings_0j45f")
metadata/_edit_use_anchors_ = true

[node name="quit_label" type="Label" parent="menu/base_canvas"]
offset_left = -16.0
offset_top = 10.0
offset_right = 16.0
offset_bottom = 31.0
text = "QUIT"
label_settings = SubResource("LabelSettings_0j45f")
metadata/_edit_use_anchors_ = true
